syntax = "proto3";

package userproto;

service UserService {
    rpc getUsers(getUserRequest) returns (getUsersResponse) {}
}

message getUserRequest {
    int32 a = 1;
}

message getUsersResponse {
    repeated User users = 1;
}

message User {
    int32 id = 1;
    string name = 2;
}